# BlueGauge

./: Cargo.toml  README-en.md  README.md  build.rs  config.ini
assets/battery_icons/: readme.md
libs/scalefs_windowspnp/: Cargo.toml
libs/scalefs_windowspnp/libs/scalefs_common/: Cargo.toml
libs/scalefs_windowspnp/libs/scalefs_uuid/: Cargo.toml
libs/scalefs_windowspnp/src/: pnp_device_property_key.rs  pnp_device_property_value.rs  pnp_enumerator.rs
libs/scalefs_windowspnp/src/errors/: enumerate_error.rs
libs/windows_pnp/: Cargo.toml
libs/windows_pnp/libs/windows_pnp_common/: Cargo.toml
libs/windows_pnp/libs/windows_pnp_uuid/: Cargo.toml
libs/windows_pnp/src/: lib.rs  pnp_device_node_info.rs  pnp_enumerator.rs
src/: bluetooth.rs  config.rs  icon.rs  language.rs  main.rs  menu_handlers.rs  notify.rs  startup.rs  systray.rs  tray.rs
src/bluetooth/: _watch.rs  ble.rs  btc.rs  info.rs  listen.rs  mod.rs
tests/: test.rs  watch.rs
