[package]
name = "BlueGauge"
version = "0.1.2"
edition = "2021"
authors = ["iKineticate <https://github.com/iKineticate>"]

[dependencies]
tray-icon = "0.19.2"
image = "0.25"
tao = "0.31.1"
scalefs_windowspnp = { path = "libs/scalefs_windowspnp" }
anyhow = "1.0.95"
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3"
rust-ini = "0.21"
glob = "0.3.2"
tauri-winrt-notification = "0.7.0"
winreg = "0.55"

[dependencies.windows]
version = "0.59.0"
features = [
    "Devices_Bluetooth",
    "Devices_Bluetooth_GenericAttributeProfile",
    "Devices_Enumeration",
    "Foundation_Collections",
    "Storage_Streams",
    "Win32_Globalization",
]

[dependencies.windows-sys]
version = "0.59.0"
features = [
    "Win32_Devices_Properties",
    "Win32_Devices_DeviceAndDriverInstallation"
]

[build-dependencies]
embed-resource = "3.0.1"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"
panic = "abort"
strip = "debuginfo"