[package]
name = "BlueGauge"
version = "0.2.0"
edition = "2024"
authors = ["iKineticate <https://github.com/iKineticate>"]

[dependencies]
anyhow = "1"
glob = "0.3.2"
image = "0.25"
rust-ini = "0.21"
windows_pnp = { path = "libs/windows_pnp" }
tauri-winrt-notification = "0.7"
tray-icon = "0.21.0"
winit = "0.30"
winreg = "0.55"

[dependencies.windows]
version = "0.61"
features = [
    "Devices_Bluetooth",
    "Devices_Bluetooth_GenericAttributeProfile",
    "deprecated",
    "Devices_Enumeration",
    "Foundation_Collections",
    "Storage_Streams",
    "Win32_Globalization",
]

[dependencies.windows-sys]
version = "0.60"
features = [
    "Win32_Devices_Properties",
    "Win32_Devices_DeviceAndDriverInstallation",
]

[dev-dependencies.windows]
version = "0.61"
features = [
    "Win32_Devices_Bluetooth",
    "Devices_Bluetooth_Rfcomm",
    "Networking_Sockets",
]

[dev-dependencies.windows-sys]
version = "0.60"
features = [
    "Wdk_Devices_Bluetooth",
]

[build-dependencies]
embed-resource = "3"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"
panic = "abort"
strip = "debuginfo"