[package]
name = "BlueGauge"
version = "0.2.6"
edition = "2024"
authors = ["iKineticate <https://github.com/iKineticate>"]
repository = "https://github.com/iKineticate/BlueGauge"

[dependencies]
anyhow = "1"
image = "0.25"
serde= { version = "1.0", features = ["derive"] }
toml = "0.9"
windows_pnp = { path = "libs/windows_pnp" }
tauri-winrt-notification = "0.7"
tray-icon = "0.21"
winit = "0.30"
winreg = "0.55"
piet-common = "0.7.0"

[dependencies.windows]
version = "0.61"
features = [
    "Devices_Bluetooth",
    "Devices_Bluetooth_GenericAttributeProfile",
    "deprecated",
    "Devices_Enumeration",
    "Foundation_Collections",
    "Storage_Streams",
    "Win32_Globalization",
]

[dependencies.windows-sys]
version = "0.60"
features = [
    "Win32_Devices_Properties",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Wdk_Devices_Bluetooth",
]

[dev-dependencies.windows]
version = "0.61"
features = [
    "Win32_Devices_Bluetooth",
    "Devices_Bluetooth_Rfcomm",
    "Networking_Sockets",
]

[build-dependencies]
embed-resource = "3"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"
panic = "abort"
strip = "debuginfo"