[package]
name = "scalefs_uuid"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/scalefs/scalefs-uuid-lib-rs"

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
]

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.60"
features = [
    "Win32_Foundation",
]